objects/Job_Request1__c.object
<CustomObject>
    <label>Job Request</label>
    <nameField>
        <label>Poste</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>LOS__c</fullName>
        <label>LOS</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pss</fullName>
                </value>
                <value>
                    <fullName>Digitech</fullName>
                </value>
                <value>
                    <fullName>Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Creation of position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_url__c</fullName>
        <label>Form url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_File__c</fullName>
        <label>Job File</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <label>Practice</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Sharepoint</fullName>
                </value>
                <value>
                    <fullName>Guidewire</fullName>
                </value>
                <value>
                    <fullName>DFY</fullName>
                </value>
                <value>
                    <fullName>G&amp;C</fullName>
                </value>
                <value>
                    <fullName>RPA</fullName>
                </value>
                <value>
                    <fullName>DataLAB</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>SalesForce</fullName>
                </value>
                <value>
                    <fullName>R&amp;A</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>ESG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Senior</fullName>
                </value>
                <value>
                    <fullName>Associate Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruitment Campaign</label>
        <referenceTo>Recruitment_Campaign2__c</referenceTo>
        <relationshipLabel>Job Requests</relationshipLabel>
        <relationshipName>Job_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_positions_budgeted__c</fullName>
        <label>Number of positions budgeted</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>OK</fullName>
        <active>true</active>
        <label>OK</label>
    </recordTypes>
    <recordTypes>
        <fullName>KO_None</fullName>
        <active>true</active>
        <label>KO/None</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pending</fullName>
        <active>true</active>
        <label>Pending</label>
    </recordTypes>
    <validationRules>
        <fullName>NumberPositionsLimit</fullName>
        <active>true</active>
        <errorConditionFormula>Number_of_positions_budgeted__c &gt; 50</errorConditionFormula>
        <errorDisplayField>Number_of_positions_budgeted__c</errorDisplayField>
        <errorMessage>Number of positions must be less than 50</errorMessage>
    </validationRules>
</CustomObject>